perf(exp-mk3): optimize collection override preparation
Avoid intermediate list allocation for canonical overrides while preserving immutable snapshots and conversion semantics. Expand the paired Legacy/MK3 runtime scenarios, document their measurement boundaries, and enforce scale-sensitive result equivalence.

Refs: #156